--- a/contacts.html
+++ b/contacts.html
@@ -66,7 +66,7 @@
         <body></body>
     </header>
     <body>
-        <section class="showcase contacts">
+        <section class="showcase showcase-contacts">
             <img class="background-lines bg-lines-contacts" src="images/background-lines.svg" alt="">
             <div class="container-contacts">
                 <div class="content">
