--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <section class="showcase">
             <img class="background-lines" src="images/background-lines.svg" alt="">
             <div class="container">
-                <div class="content">
+                <div class="content content-left">
                     <h1>We Provide The Best Business Solutions</h1>
                     <p>Establish your vision and value proposition and turn them into testable prototypes.</p>
                     <a class="btn-yellow" href="login.html">Get Consulting<i class="fa-solid fa-arrow-up-right"></i>
@@ -162,7 +162,7 @@
                             <a class="btn-circle" href=" login.html">
                                 <i class="fa-solid fa-caret-right"></i>
                             </a>
-                            <p>Intro Video</p>
+                            <p class="btn-txt-right">Intro Video</p>
                         </div>
                     </div>
 
@@ -303,7 +303,7 @@
                     <div class="top-row">
                         <h3>experience team members
                         </h3>
-                        <a class="btn-transparent" href="services.html">browse team<i class="fa-regular fa-arrow-up-right"></i>
+                        <a class="btn-transparent btn-browse" href="services.html">browse team<i class="fa-regular fa-arrow-up-right"></i>
                         </a>
                     </div>
                 </div>
@@ -401,17 +401,7 @@
             </div>
         </section>
 
-        <section class="subscribe">
-            <img src="images/background-wavy-lines.svg" alt="" class="background-wavy-lines">
-            <div class="container">
-                <h2>get news updates by signup</h2>
-                <form class="input-box">
-                    <input type="text" placeholder="username@domain.com">
-                    <button class="btn-yellow btn-yellow-scale">Subscribe<i class="fa-regular fa-arrow-up-right"></i>
-                    </button>
-                </form>
-            </div>
-        </section>
+
 
         <section class="articles-news">
             <div class="container">
@@ -424,6 +414,7 @@
                     </div>
                 </div>
                 <div class="articles">
+                    <a class="link-no-style" href="#">
                     <article>
                         <img class="img-1" src="images/article-1.png" alt="A woman with long brown hair and wearing a blue suit, sitting on a chair next to a table, smiling">
                         <div class="box-date">
@@ -437,6 +428,8 @@
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
                         </div>
                     </article>
+                </a>
+                <a class="link-no-style" href="#">
                     <article>
                         <img class="img-1" src="images/article-2.png" alt="Descriptions about Chat GPT's ability">
                         <div class="box-date">
@@ -449,7 +442,8 @@
                             <h5>how to implement chat GPT in your projects</h5>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
                         </div>
-                    </article>
+                    </article></a>
+                    <a class="link-no-style" href="#">
                     <article>
                         <img class="img-1" src="images/article-3.png" alt="A mobile phone lying on the top of two books about CSS and Jquery">
                         <div class="box-date">
@@ -462,7 +456,7 @@
                             <h5>the guide to support modern CSS design</h5>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
                         </div>
-                    </article>
+                    </article></a>
                 </div>
             </div>
             <div class="dots">
@@ -471,6 +465,18 @@
                 <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
+            </div>
+        </section>
+
+        <section class="subscribe">
+            <img src="images/background-wavy-lines.svg" alt="" class="background-wavy-lines">
+            <div class="container">
+                <h2>get news updates by signup</h2>
+                <form class="input-box">
+                    <input type="text" placeholder="username@domain.com">
+                    <button class="btn-yellow btn-yellow-scale">Subscribe<i class="fa-regular fa-arrow-up-right"></i>
+                    </button>
+                </form>
             </div>
         </section>
 
@@ -541,7 +547,7 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script> -->
     <!-- <script src="scripts/script.js"></script>  -->
     </body>
 
