--- a/service.html
+++ b/service.html
@@ -70,78 +70,15 @@
             <img class="background-lines bg-lines-contacts" src="images/background-lines.svg" alt="">
             <div class="container-contacts">
                 <div class="content">
-                    <h1 class="small-h1">home contact</h1>
-                    <p class="large-p">let's connect</p>
+                    <h1 class="small-h1">home Service</h1>
+                    <p class="large-p">Service</p>
                 </div>
             </div>
         </section>
 
-        <section class="contact-information">
-            <div class="container">
-
-                <a href="#">
-                    <div class="item item-1">
-                        <i class="fa-solid fa-location-dot"></i>
-                        <h3>Visit us</h3>
-                        <p>sveavägen 31 111 34
-                            <span>stockholm</span>
-                        </p>
-                    </div>
-                </a>
-
-                <a href="#">
-                    <div class="item item-2">
-                        <i class="fa-solid fa-phone"></i>
-                        <h3>Call us</h3>
-                        <p>+46 (8) 121 470 50<br>
-                                                    +46 (8) 121 470 51
-                        </p>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="item item-3">
-                        <i class="fa-regular fa-envelope"></i>
-                        <h3>Email us</h3>
-                        <p>info@crito.com<br>
-                                                    support@crito.com
-                        </p>
-                    </div>
-                </a>
-            </div>
-        </section>
-
-        <section class="contact-form container">
-            <h2>Leave us a message for any information</h2>
-            <!-- Label bör vara med ur tillgänglighets-aspekt, men i design-filen 
-            är detta inte med, därför markerar jag ut dessa -->
-            <form id="registerform" method="post" class="container mt-4">
-                <div
-                    class="mb-3">
-                    <!-- <label class="form-label" for="firstName">Förnamn</label> -->
-                    <input class="form-input" type="text" id="firstName" name="firstName" title="Förnamn" placeholder="Name*" tabindex="1" class="p-2">
-                </div>
-                <div
-                    class="mb-3">
-                    <!-- <label class="form-label" for="email">Email</label> -->
-                    <input class="form-input" type="email" id="email" name="email" title="E-postadress" placeholder="Email*" tabindex="2" class="p-2">
-                </div>
-                <div
-                    class="mb-5">
-                    <!-- <label class="form-label" for="biography">Biografi</label> -->
-                    <textarea class="form-input" name="biography" id="biography" placeholder="Your Message*"></textarea>
-                </div>
-                <div
-                    class="d-grid pb-5">
-                    <!--Använder Bootstrap för att skapa en padding-bottom-->
-                    <button class="btn btn-yellow" type="submit">Send Sessage<i class="arrow-top-right fa-regular fa-arrow-up-right"></i>
-                    </button>
-                </div>
-            </form>
-        </section>
-
-<img class="img-map" src="images/map.png" alt="Image of a map of Stockholm">
 
 
+        
 
 <footer>
     <div class="img-advertising-footer">
