--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
                     <div class="top-menu">
                         <div class="contact-information">
                             <div class="content-box">
-                                <i class="contact-icon fa-solid fa-phone"></i>
+                              <a href="#">  <i class="contact-icon fa-solid fa-phone"></i>
                                 +46 (8) 121 470 50
-                            </div>
+                            </div></a>
                             <div class="content-box">
-                                <i class="contact-icon fa-regular fa-envelope"></i>
+                                <a href="#"><i class="contact-icon fa-regular fa-envelope"></i>
                                 info@crito.com
-                            </div>
+                            </div></a>
                             <div class="content-box last">
-                                <i class="contact-icon fa-solid fa-location-dot"></i>
+                               <a href="#"> <i class="contact-icon fa-solid fa-location-dot"></i>
                                 Sveavägen 31, 111 34 STOCKHOLM
-                            </div>
+                            </div></a>
                         </div>
                         <div class="social-media">
                             <a href="https://facebook.com" target="_blank">
@@ -57,7 +57,7 @@
                     <div class="main-menu">
                         <nav>
                             <a class="active" href="index.html">Home</a>
-                            <a href="services.html">Service</a>
+                            <a href="service.html">Service</a>
                             <a href="news.html">News</a>
                             <a href="contacts.html">Contacts</a>
                         </nav>
