Cleaned the code

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="sv-se">
-
     <head>
         <meta charset="UTF-8">
         <meta
@@ -13,9 +12,7 @@
         <link rel="stylesheet" href="/css/style.css">
         <title>Crito</title>
     </head>
-
     <body>
-        <!-- <main> -->
         <header>
             <div class="container">
                 <a class="logotype" href="index.html"><img src="images/Logo.svg" alt="crito logotype"></a>
@@ -23,21 +20,26 @@
                     <i class="fa-solid fa-bars"></i>
                 </button>
                 <div class="menu">
-
                     <div class="top-menu">
                         <div class="contact-information">
                             <div class="content-box">
-                              <a href="#">  <i class="contact-icon fa-solid fa-phone"></i>
-                                +46 (8) 121 470 50
-                            </div></a>
+                                <a href="#">
+                                    <i class="contact-icon fa-solid fa-phone"></i>
+                                    +46 (8) 121 470 50
+                                </a>
+                            </div>
                             <div class="content-box">
-                                <a href="#"><i class="contact-icon fa-regular fa-envelope"></i>
-                                info@crito.com
-                            </div></a>
+                                <a href="#">
+                                    <i class="contact-icon fa-regular fa-envelope"></i>
+                                    info@crito.com
+                                </a>
+                            </div>
                             <div class="content-box last">
-                               <a href="#"> <i class="contact-icon fa-solid fa-location-dot"></i>
-                                Sveavägen 31, 111 34 STOCKHOLM
-                            </div></a>
+                                <a href="#">
+                                    <i class="contact-icon fa-solid fa-location-dot"></i>
+                                    Sveavägen 31, 111 34 STOCKHOLM
+                                </a>
+                            </div>
                         </div>
                         <div class="social-media">
                             <a href="https://facebook.com" target="_blank">
@@ -61,7 +63,6 @@
                             <a href="news.html">News</a>
                             <a href="contacts.html">Contacts</a>
                         </nav>
-
                         <a class="btn-yellow btn-login" href="login.html">Login
                             <i class="fa-solid fa-arrow-up-right"></i>
                         </a>
@@ -69,7 +70,6 @@
                 </div>
             </div>
         </header>
-
         <section class="showcase">
             <img class="background-lines" src="images/background-lines.svg" alt="">
             <div class="container">
@@ -84,7 +84,6 @@
                 <img class="img-showcase" src="images/Image-showcase.png" alt="showcase image of a man in a suit with a tablet">
             </div>
         </section>
-
         <div class="img-advertising container">
             <img src="images/3.svg" alt="">
             <img src="images/🖥-Landing-Pages.svg" alt="">
@@ -92,7 +91,6 @@
             <img src="images/Page-3.svg" alt="">
             <img src="images/Page-1.svg" alt="">
         </div>
-
         <section class="features">
             <div class="border-container">
                 <div class="container">
@@ -132,6 +130,7 @@
             <div class="container">
 
                 <div class="founder">
+                    <img class="wavy-lines-left" src="images/wavy-lines-left.svg" alt="Wavy lines, design">
                     <img src="images/Image-about.svg" alt="Image of the Founder, Samantha Brown">
                     <div class="background-frame">
                         <p>
@@ -169,7 +168,6 @@
                 </div>
             </div>
         </section>
-
         <section class="services">
             <img class="background-lines-right" src="images/background-lines-right.svg" alt="">
             <div class="container">
@@ -218,7 +216,6 @@
             </div>
 
         </section>
-
         <section class="choose-us">
             <div class="container">
                 <div class="content">
@@ -230,33 +227,29 @@
                         <h2 class="heading-red">Why Choose Us</h2>
                         <h3>why we are the best business consulting agency</h3>
                     </div>
-
                     <div class="box">
-                        <a href=""><img src="images/Frame 23.svg" alt="Icon Process Excellence"></a>
+                        <a href="#"><img src="images/Frame23.svg" alt="Icon Process Excellence"></a>
                         <h4>process excellence</h4>
                         <p>Lorem, ipsum dolor sit amet concectetur.</p>
                     </div>
                     <div class="box">
-                        <a href=""><img src="images/icon-choose-us-second.svg" alt="Icon strategic planning"></a>
+                        <a href="#"><img src="images/icon-choose-us-second.svg" alt="Icon strategic planning"></a>
                         <h4>strategic planning</h4>
                         <p>Lorem, ipsum dolor sit amet concectetur.</p>
                     </div>
                     <div class="box">
-                        <a href=""><img src="images/icon-design.svg" alt="Icon experience design"></a>
+                        <a href="#"><img src="images/icon-design.svg" alt="Icon experience design"></a>
                         <h4>experience design</h4>
                         <p>Lorem, ipsum dolor sit amet concectetur.</p>
                     </div>
                     <div class="box">
-                        <a href=""><img src="images/icon-ai.svg" alt="Icon Artificial Intelligence"></a>
+                        <a href="#"><img src="images/icon-ai.svg" alt="Icon Artificial Intelligence"></a>
                         <h4>artificial intelligence</h4>
                         <p>Lorem, ipsum dolor sit amet concectetur.</p>
                     </div>
                 </div>
-
-
             </div>
         </section>
-
         <section class="case">
             <div class="container">
                 <div class="headlines">
@@ -295,7 +288,6 @@
                 </div>
             </div>
         </section>
-
         <section class="team">
             <div class="container">
                 <div class="top-heading">
@@ -338,9 +330,6 @@
                 <span class="dot"></span>
             </div>
         </section>
-        <!-- </main> -->
-
-
         <section class="testimonial">
             <div class="container border">
                 <div class="top-heading">
@@ -359,7 +348,7 @@
                         <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium libero, ad dignissimos velit qui, dolorum obcaecati cum saepe nesciunt nemo eligendi numquam voluptate"</p>
                         <div class="rater">
                             <img src="images/rater-1.jpg" alt="">
-                            <p class="name">cassandra warren</p>
+                            <h5 class="name">cassandra warren</h5>
                             <p class="descr-txt">business manager, dorfus</p>
                         </div>
                     </div>
@@ -374,7 +363,7 @@
                         <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium libero, ad dignissimos velit qui, dolorum obcaecati cum saepe nesciunt nemo eligendi numquam voluptate"</p>
                         <div class="rater">
                             <img src="images/rater-2.jpg" alt="">
-                            <p class="name">amanda tulling</p>
+                            <h5 class="name">amanda tulling</h5>
                             <p class="descr-txt">senior developer, square</p>
                         </div>
                     </div>
@@ -389,7 +378,7 @@
                         <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium libero, ad dignissimos velit qui, dolorum obcaecati cum saepe nesciunt nemo eligendi numquam voluptate"</p>
                         <div class="rater">
                             <img src="images/rater-3.jpg" alt="">
-                            <p class="name">jack mcdogglas</p>
+                            <h5 class="name">jack mcdogglas</h5>
                             <p class="descr-txt">key account manager, gobona</p>
                         </div>
                     </div>
@@ -400,63 +389,62 @@
                 </div>
             </div>
         </section>
-
-
-
         <section class="articles-news">
             <div class="container">
                 <div class="top-heading">
                     <h2>article & news</h2>
                     <div class="top-row">
                         <h3>get every single articles & news</h3>
-                        <a class="btn-transparent" href="services.html">browse articles<i class="fa-regular fa-arrow-up-right"></i>
+                        <a class="btn-transparent" href="news.html">browse articles<i class="fa-regular fa-arrow-up-right"></i>
                         </a>
                     </div>
                 </div>
                 <div class="articles">
                     <a class="link-no-style" href="#">
-                    <article>
-                        <img class="img-1" src="images/article-1.png" alt="A woman with long brown hair and wearing a blue suit, sitting on a chair next to a table, smiling">
-                        <div class="box-date">
-                            <p>
-                                <span>25</span>Mar
-                            </p>
-                        </div>
-                        <div class="content">
-                            <h4>business</h4>
-                            <h5>how to use digitalization in the classroom</h5>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
-                        </div>
-                    </article>
-                </a>
-                <a class="link-no-style" href="#">
-                    <article>
-                        <img class="img-1" src="images/article-2.png" alt="Descriptions about Chat GPT's ability">
-                        <div class="box-date">
-                            <p>
-                                <span>17</span>Mar
-                            </p>
-                        </div>
-                        <div class="content">
-                            <h4>business</h4>
-                            <h5>how to implement chat GPT in your projects</h5>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
-                        </div>
-                    </article></a>
+                        <article>
+                            <img class="img-1" src="images/article-1.png" alt="A woman with long brown hair and wearing a blue suit, sitting on a chair next to a table, smiling">
+                            <div class="box-date">
+                                <p>
+                                    <span>25</span>Mar
+                                </p>
+                            </div>
+                            <div class="content">
+                                <h4>business</h4>
+                                <h5>how to use digitalization in the classroom</h5>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
+                            </div>
+                        </article>
+                    </a>
                     <a class="link-no-style" href="#">
-                    <article>
-                        <img class="img-1" src="images/article-3.png" alt="A mobile phone lying on the top of two books about CSS and Jquery">
-                        <div class="box-date">
-                            <p>
-                                <span>13</span>Mar
-                            </p>
-                        </div>
-                        <div class="content">
-                            <h4>business</h4>
-                            <h5>the guide to support modern CSS design</h5>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
-                        </div>
-                    </article></a>
+                        <article>
+                            <img class="img-1" src="images/article-2.png" alt="Descriptions about Chat GPT's ability">
+                            <div class="box-date">
+                                <p>
+                                    <span>17</span>Mar
+                                </p>
+                            </div>
+                            <div class="content">
+                                <h4>business</h4>
+                                <h5>how to implement chat GPT in your projects</h5>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
+                            </div>
+                        </article>
+                    </a>
+                    <a class="link-no-style" href="#">
+                        <article>
+                            <img class="img-1" src="images/article-3.png" alt="A mobile phone lying on the top of two books about CSS and Jquery">
+                            <div class="box-date">
+                                <p>
+                                    <span>13</span>Mar
+                                </p>
+                            </div>
+                            <div class="content">
+                                <h4>business</h4>
+                                <h5>the guide to support modern CSS design</h5>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
+                            </div>
+                        </article>
+                    </a>
                 </div>
             </div>
             <div class="dots">
@@ -467,7 +455,6 @@
                 <span class="dot"></span>
             </div>
         </section>
-
         <section class="subscribe">
             <img src="images/background-wavy-lines.svg" alt="" class="background-wavy-lines">
             <div class="container">
@@ -479,8 +466,6 @@
                 </form>
             </div>
         </section>
-
-
         <footer>
             <div class="img-advertising-footer">
                 <img src="images/3.svg" alt="">
@@ -496,7 +481,6 @@
                         <img src="images/logotype-white.svg" alt="Logotype">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.</p>
                     </div>
-    
                     <div class="box box-2">
                         <h4>company</h4>
                         <a href="#">about</a>
@@ -528,7 +512,6 @@
                 </div>
             </div>
             <div class="bottom">
-    
                 <p class="footer-txt">&copy; 2023 crito - consulting company inc. all right reserved.</p>
                 <div class="social-media-footer">
                     <a href="https://facebook.com" target="_blank">
@@ -545,12 +528,6 @@
                     </a>
                 </div>
             </div>
-        </div>
-    </footer>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script> -->
-    <!-- <script src="scripts/script.js"></script>  -->
+        </footer>
     </body>
-
-   
-
 </html>
