--- a/contacts.html
+++ b/contacts.html
@@ -11,61 +11,64 @@
         <link rel="stylesheet" href="/css/style.css">
         <title>Crito</title>
     </head>
-    <header>
-        <div class="container">
-            <a href="index.html"><img src="images/Logo.svg" alt="crito logotype"></a>
-            <button class="menu-bars">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-            <div class="menu">
-
-                <div class="top-menu">
-                    <div class="contact-information">
-                        <div class="content-box">
-                          <a href="#">  <i class="contact-icon fa-solid fa-phone"></i>
-                            +46 (8) 121 470 50
-                        </div></a>
-                        <div class="content-box">
-                            <a href="#"><i class="contact-icon fa-regular fa-envelope"></i>
-                            info@crito.com
-                        </div></a>
-                        <div class="content-box last">
-                           <a href="#"> <i class="contact-icon fa-solid fa-location-dot"></i>
-                            Sveavägen 31, 111 34 STOCKHOLM
-                        </div></a>
+<body>
+        <header>
+            <div class="container">
+                <a href="index.html"><img src="images/Logo.svg" alt="crito logotype"></a>
+                <button class="menu-bars">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+                <div class="menu">
+                    <div class="top-menu">
+                        <div class="contact-information">
+                            <div class="content-box">
+                                <a href="#">
+                                    <i class="contact-icon fa-solid fa-phone"></i>
+                                    +46 (8) 121 470 50
+                                </div>
+                            </a>
+                            <div class="content-box">
+                                <a href="#">
+                                    <i class="contact-icon fa-regular fa-envelope"></i>
+                                    info@crito.com
+                                </div>
+                            </a>
+                            <div class="content-box last">
+                                <a href="#">
+                                    <i class="contact-icon fa-solid fa-location-dot"></i>
+                                    Sveavägen 31, 111 34 STOCKHOLM
+                                </div>
+                            </a>
+                        </div>
+                        <div class="social-media">
+                            <a href="https://facebook.com" target="_blank">
+                                <i class="social-media-icon fa-brands fa-facebook"></i>
+                            </a>
+                            <a href="#https://twitter.com/" target="_blank">
+                                <i class="social-media-icon fa-brands fa-twitter"></i>
+                            </a>
+                            <a href="https://instagram.com/" target="_blank">
+                                <i class="social-media-icon fa-brands fa-instagram"></i>
+                            </a>
+                            <a href="https://linkein.com/" target="_blank">
+                                <i class="social-media-icon fa-brands fa-linkedin"></i>
+                            </a>
+                        </div>
                     </div>
-                    <div class="social-media">
-                        <a href="https://facebook.com" target="_blank">
-                            <i class="social-media-icon fa-brands fa-facebook"></i>
-                        </a>
-                        <a href="#https://twitter.com/" target="_blank">
-                            <i class="social-media-icon fa-brands fa-twitter"></i>
-                        </a>
-                        <a href="https://instagram.com/" target="_blank">
-                            <i class="social-media-icon fa-brands fa-instagram"></i>
-                        </a>
-                        <a href="https://linkein.com/" target="_blank">
-                            <i class="social-media-icon fa-brands fa-linkedin"></i>
+                    <div class="main-menu">
+                        <nav>
+                            <a href="index.html">Home</a>
+                            <a href="service.html">Service</a>
+                            <a href="news.html">News</a>
+                            <a class="active" href="contacts.html">Contacts</a>
+                        </nav>
+                        <a class="btn-yellow" href="login.html">Login
+                            <i class="fa-solid fa-square-arrow-up-right"></i>
                         </a>
                     </div>
-                </div>
-                <div class="main-menu">
-                    <nav>
-                        <a href="index.html">Home</a>
-                        <a href="service.html">Service</a>
-                        <a href="news.html">News</a>
-                        <a class="active" href="contacts.html">Contacts</a>
-                    </nav>
-
-                    <a class="btn-yellow" href="login.html">Login
-                        <i class="fa-solid fa-square-arrow-up-right"></i>
-                    </a>
                 </div>
             </div>
-        </div>
-        <body></body>
-    </header>
-    <body>
+        </header>
         <section class="showcase showcase-contacts">
             <img class="background-lines bg-lines-contacts" src="images/background-lines.svg" alt="">
             <div class="container-contacts">
@@ -75,10 +78,8 @@
                 </div>
             </div>
         </section>
-
         <section class="contact-information">
             <div class="container">
-
                 <a href="#">
                     <div class="item item-1">
                         <i class="fa-solid fa-location-dot"></i>
@@ -88,13 +89,12 @@
                         </p>
                     </div>
                 </a>
-
                 <a href="#">
                     <div class="item item-2">
                         <i class="fa-solid fa-phone"></i>
                         <h3>Call us</h3>
                         <p>+46 (8) 121 470 50<br>
-                                                    +46 (8) 121 470 51
+                            +46 (8) 121 470 51
                         </p>
                     </div>
                 </a>
@@ -103,17 +103,16 @@
                         <i class="fa-regular fa-envelope"></i>
                         <h3>Email us</h3>
                         <p>info@crito.com<br>
-                                                    support@crito.com
+                            support@crito.com
                         </p>
                     </div>
                 </a>
             </div>
         </section>
-
         <section class="contact-form container">
             <h2>Leave us a message for any information</h2>
             <!-- Label bör vara med ur tillgänglighets-aspekt, men i design-filen 
-            är detta inte med, därför markerar jag ut dessa -->
+                            är detta inte med, därför markerar jag ut dessa -->
             <form id="registerform" method="post" class="container mt-4">
                 <div
                     class="mb-3">
@@ -138,81 +137,69 @@
                 </div>
             </form>
         </section>
-
-<img class="img-map" src="images/map.png" alt="Image of a map of Stockholm">
-
-
-
-<footer>
-    <div class="img-advertising-footer">
-        <img src="images/3.svg" alt="">
-        <img src="images/🖥-Landing-Pages.svg" alt="">
-        <img src="images/Page-2.svg" alt="">
-        <img src="images/Page-3.svg" alt="">
-        <img src="images/Page-1.svg" alt="">
-    </div>
-
-    <div class="footer-top">
-        <img class="background-lines-right" src="images/background-lines-right.svg" alt="">
-        <div class="container">
-            <div class="box box-1">
-                <img src="images/logotype-white.svg" alt="Logotype">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.</p>
+        <img class="img-map" src="images/map.png" alt="Image of a map of Stockholm">
+        <footer>
+            <div class="img-advertising-footer">
+                <img src="images/3.svg" alt="">
+                <img src="images/🖥-Landing-Pages.svg" alt="">
+                <img src="images/Page-2.svg" alt="">
+                <img src="images/Page-3.svg" alt="">
+                <img src="images/Page-1.svg" alt="">
             </div>
-            <div class="box box-2">
-                <h4>company</h4>
-                <a href="#">about</a>
-                <a href="#">features</a>
-                <a href="#">works</a>
-                <a href="#">career</a>
+            <div class="footer-top">
+                <img class="background-lines-right" src="images/background-lines-right.svg" alt="">
+                <div class="container">
+                    <div class="box box-1">
+                        <img src="images/logotype-white.svg" alt="Logotype">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.</p>
+                    </div>
+                    <div class="box box-2">
+                        <h4>company</h4>
+                        <a href="#">about</a>
+                        <a href="#">features</a>
+                        <a href="#">works</a>
+                        <a href="#">career</a>
+                    </div>
+                    <div class="box box-3">
+                        <h4>help</h4>
+                        <a href="#">customer support</a>
+                        <a href="#">delivery details</a>
+                        <a href="#">terms & conditions</a>
+                        <a href="#">privacy policy</a>
+                    </div>
+                    <div class="box box-4">
+                        <h4>Resources</h4>
+                        <a href="#">Free eBooks</a>
+                        <a href="#">Development Tutorial</a>
+                        <a href="#">How to - Blog</a>
+                        <a href="#">Youtube Playlist</a>
+                    </div>
+                    <div class="box box-5">
+                        <h4>Link</h4>
+                        <a href="#">Free eBooks</a>
+                        <a href="#">Development Tutorial</a>
+                        <a href="#">How to - Blog</a>
+                        <a href="#">Youtube Playlist</a>
+                    </div>
+                </div>
             </div>
-            <div class="box box-3">
-                <h4>help</h4>
-                <a href="#">customer support</a>
-                <a href="#">delivery details</a>
-                <a href="#">terms & conditions</a>
-                <a href="#">privacy policy</a>
+            <div class="bottom">
+                <p class="footer-txt">&copy; 2023 crito - consulting company inc. all right reserved.</p>
+                <div class="social-media-footer">
+                    <a href="https://facebook.com" target="_blank">
+                        <i class="social-media-icon fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="#https://twitter.com/" target="_blank">
+                        <i class="social-media-icon fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="https://instagram.com/" target="_blank">
+                        <i class="social-media-icon fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://linkein.com/" target="_blank">
+                        <i class="social-media-icon fa-brands fa-linkedin"></i>
+                    </a>
+                </div>
             </div>
-            <div class="box box-4">
-                <h4>Resources</h4>
-                <a href="#">Free eBooks</a>
-                <a href="#">Development Tutorial</a>
-                <a href="#">How to - Blog</a>
-                <a href="#">Youtube Playlist</a>
-            </div>
-            <div class="box box-5">
-                <h4>Link</h4>
-                <a href="#">Free eBooks</a>
-                <a href="#">Development Tutorial</a>
-                <a href="#">How to - Blog</a>
-                <a href="#">Youtube Playlist</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="bottom">
-        <p class="footer-txt">&copy; 2023 crito - consulting company inc. all right reserved.</p>
-        <div class="social-media-footer">
-            <a href="https://facebook.com" target="_blank">
-                <i class="social-media-icon fa-brands fa-facebook"></i>
-            </a>
-            <a href="#https://twitter.com/" target="_blank">
-                <i class="social-media-icon fa-brands fa-twitter"></i>
-            </a>
-            <a href="https://instagram.com/" target="_blank">
-                <i class="social-media-icon fa-brands fa-instagram"></i>
-            </a>
-            <a href="https://linkein.com/" target="_blank">
-                <i class="social-media-icon fa-brands fa-linkedin"></i>
-            </a>
-        </div>
-    </div>
-
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-<!-- <script src="scripts/script.js"></script>  -->
+        </footer>
     </body>
-
-    
-
 </html>
