--- a/service.html
+++ b/service.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="/css/style.css">
         <title>Crito</title>
     </head>
+    <body>
     <header>
         <div class="container">
             <a href="index.html"><img src="images/Logo.svg" alt="crito logotype"></a>
@@ -18,21 +19,26 @@
                 <i class="fa-solid fa-bars"></i>
             </button>
             <div class="menu">
-
                 <div class="top-menu">
                     <div class="contact-information">
                         <div class="content-box">
-                          <a href="#">  <i class="contact-icon fa-solid fa-phone"></i>
-                            +46 (8) 121 470 50
-                        </div></a>
+                            <a href="#">
+                                <i class="contact-icon fa-solid fa-phone"></i>
+                                +46 (8) 121 470 50
+                            </div>
+                        </a>
                         <div class="content-box">
-                            <a href="#"><i class="contact-icon fa-regular fa-envelope"></i>
-                            info@crito.com
-                        </div></a>
+                            <a href="#">
+                                <i class="contact-icon fa-regular fa-envelope"></i>
+                                info@crito.com
+                            </div>
+                        </a>
                         <div class="content-box last">
-                           <a href="#"> <i class="contact-icon fa-solid fa-location-dot"></i>
-                            Sveavägen 31, 111 34 STOCKHOLM
-                        </div></a>
+                            <a href="#">
+                                <i class="contact-icon fa-solid fa-location-dot"></i>
+                                Sveavägen 31, 111 34 STOCKHOLM
+                            </div>
+                        </a>
                     </div>
                     <div class="social-media">
                         <a href="https://facebook.com" target="_blank">
@@ -52,20 +58,17 @@
                 <div class="main-menu">
                     <nav>
                         <a href="index.html">Home</a>
-                        <a href="service.html">Service</a>
+                        <a class="active" href="service.html">Service</a>
                         <a href="news.html">News</a>
-                        <a class="active" href="contacts.html">Contacts</a>
+                        <a href="contacts.html">Contacts</a>
                     </nav>
-
                     <a class="btn-yellow" href="login.html">Login
                         <i class="fa-solid fa-square-arrow-up-right"></i>
                     </a>
                 </div>
             </div>
         </div>
-        <body></body>
     </header>
-    <body>
         <section class="showcase showcase-contacts">
             <img class="background-lines bg-lines-contacts" src="images/background-lines.svg" alt="">
             <div class="container-contacts">
@@ -75,81 +78,68 @@
                 </div>
             </div>
         </section>
-
-
-
-        
-
-<footer>
-    <div class="img-advertising-footer">
-        <img src="images/3.svg" alt="">
-        <img src="images/🖥-Landing-Pages.svg" alt="">
-        <img src="images/Page-2.svg" alt="">
-        <img src="images/Page-3.svg" alt="">
-        <img src="images/Page-1.svg" alt="">
-    </div>
-
-    <div class="footer-top">
-        <img class="background-lines-right" src="images/background-lines-right.svg" alt="">
-        <div class="container">
-            <div class="box box-1">
-                <img src="images/logotype-white.svg" alt="Logotype">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.</p>
+        <footer>
+            <div class="img-advertising-footer">
+                <img src="images/3.svg" alt="">
+                <img src="images/🖥-Landing-Pages.svg" alt="">
+                <img src="images/Page-2.svg" alt="">
+                <img src="images/Page-3.svg" alt="">
+                <img src="images/Page-1.svg" alt="">
             </div>
-            <div class="box box-2">
-                <h4>company</h4>
-                <a href="#">about</a>
-                <a href="#">features</a>
-                <a href="#">works</a>
-                <a href="#">career</a>
+            <div class="footer-top">
+                <img class="background-lines-right" src="images/background-lines-right.svg" alt="">
+                <div class="container">
+                    <div class="box box-1">
+                        <img src="images/logotype-white.svg" alt="Logotype">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.</p>
+                    </div>
+                    <div class="box box-2">
+                        <h4>company</h4>
+                        <a href="#">about</a>
+                        <a href="#">features</a>
+                        <a href="#">works</a>
+                        <a href="#">career</a>
+                    </div>
+                    <div class="box box-3">
+                        <h4>help</h4>
+                        <a href="#">customer support</a>
+                        <a href="#">delivery details</a>
+                        <a href="#">terms & conditions</a>
+                        <a href="#">privacy policy</a>
+                    </div>
+                    <div class="box box-4">
+                        <h4>Resources</h4>
+                        <a href="#">Free eBooks</a>
+                        <a href="#">Development Tutorial</a>
+                        <a href="#">How to - Blog</a>
+                        <a href="#">Youtube Playlist</a>
+                    </div>
+                    <div class="box box-5">
+                        <h4>Link</h4>
+                        <a href="#">Free eBooks</a>
+                        <a href="#">Development Tutorial</a>
+                        <a href="#">How to - Blog</a>
+                        <a href="#">Youtube Playlist</a>
+                    </div>
+                </div>
             </div>
-            <div class="box box-3">
-                <h4>help</h4>
-                <a href="#">customer support</a>
-                <a href="#">delivery details</a>
-                <a href="#">terms & conditions</a>
-                <a href="#">privacy policy</a>
+            <div class="bottom">
+                <p class="footer-txt">&copy; 2023 crito - consulting company inc. all right reserved.</p>
+                <div class="social-media-footer">
+                    <a href="https://facebook.com" target="_blank">
+                        <i class="social-media-icon fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="#https://twitter.com/" target="_blank">
+                        <i class="social-media-icon fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="https://instagram.com/" target="_blank">
+                        <i class="social-media-icon fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://linkein.com/" target="_blank">
+                        <i class="social-media-icon fa-brands fa-linkedin"></i>
+                    </a>
+                </div>
             </div>
-            <div class="box box-4">
-                <h4>Resources</h4>
-                <a href="#">Free eBooks</a>
-                <a href="#">Development Tutorial</a>
-                <a href="#">How to - Blog</a>
-                <a href="#">Youtube Playlist</a>
-            </div>
-            <div class="box box-5">
-                <h4>Link</h4>
-                <a href="#">Free eBooks</a>
-                <a href="#">Development Tutorial</a>
-                <a href="#">How to - Blog</a>
-                <a href="#">Youtube Playlist</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="bottom">
-        <p class="footer-txt">&copy; 2023 crito - consulting company inc. all right reserved.</p>
-        <div class="social-media-footer">
-            <a href="https://facebook.com" target="_blank">
-                <i class="social-media-icon fa-brands fa-facebook"></i>
-            </a>
-            <a href="#https://twitter.com/" target="_blank">
-                <i class="social-media-icon fa-brands fa-twitter"></i>
-            </a>
-            <a href="https://instagram.com/" target="_blank">
-                <i class="social-media-icon fa-brands fa-instagram"></i>
-            </a>
-            <a href="https://linkein.com/" target="_blank">
-                <i class="social-media-icon fa-brands fa-linkedin"></i>
-            </a>
-        </div>
-    </div>
-
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-<!-- <script src="scripts/script.js"></script>  -->
+        </footer>
     </body>
-
-    
-
 </html>
