solved the scss-problem

--- a/news.html
+++ b/news.html
@@ -228,7 +228,7 @@
             </div>
             <div class="next-page">
                 <a href="#" class="previous link-no-style"><i class="fa-solid fa-chevron-left"></i></a>
-                <a href="#" class="page-number link-no-style">1</a>
+                <a href="#" class="page-number page-number-one link-no-style">1</a>
                 <a href="#" class="page-number link-no-style">2</a>
                 <a href="#" class="page-number link-no-style">3</a>
                 <a href="#" class="page-number link-no-style">...</a>
