--- a/service.html
+++ b/service.html
@@ -70,7 +70,7 @@
         </div>
     </header>
         <section class="showcase showcase-contacts">
-            <img class="background-lines bg-lines-contacts" src="images/background-lines.svg" alt="">
+            <!-- <img class="background-lines bg-lines-contacts" src="images/background-lines.svg" alt=""> -->
             <div class="container-contacts">
                 <div class="content">
                     <h1 class="small-h1">home Service</h1>
