--- a/index.html
+++ b/index.html
@@ -17,42 +17,43 @@
             <div class="container">
                 <a class="logotype" href="index.html"><img src="images/Logo.svg" alt="crito logotype"></a>
                 <button class="menu-bars">
-                    <i class="fa-solid fa-bars"></i>
+                    <i class="fa-solid fa-bars" aria-hidden="true"></i>
                 </button>
                 <div class="menu">
                     <div class="top-menu">
                         <div class="contact-information">
                             <div class="content-box">
                                 <a href="#">
-                                    <i class="contact-icon fa-solid fa-phone"></i>
+                                    <i class="contact-icon fa-solid fa-phone" aria-hidden="true"></i>
                                     +46 (8) 121 470 50
                                 </a>
                             </div>
                             <div class="content-box">
                                 <a href="#">
-                                    <i class="contact-icon fa-regular fa-envelope"></i>
+                                    <i class="contact-icon fa-regular fa-envelope" aria-hidden="true"></i>
                                     info@crito.com
                                 </a>
                             </div>
                             <div class="content-box last">
                                 <a href="#">
-                                    <i class="contact-icon fa-solid fa-location-dot"></i>
+                                    <i class="contact-icon fa-solid fa-location-dot" aria-hidden="true"></i>
                                     Sveavägen 31, 111 34 STOCKHOLM
                                 </a>
                             </div>
                         </div>
+                        <!-- aria-label and title to show the title when hover -->
                         <div class="social-media">
-                            <a href="https://facebook.com" target="_blank">
-                                <i class="social-media-icon fa-brands fa-facebook"></i>
+                            <a aria-label="facebook" href="https://facebook.com" target="_blank">
+                                <i class="social-media-icon fa-brands fa-facebook" aria-hidden="true" title="facebook"></i>
                             </a>
-                            <a href="#https://twitter.com/" target="_blank">
-                                <i class="social-media-icon fa-brands fa-twitter"></i>
+                            <a aria-label="Twitter" href="#https://twitter.com/" target="_blank">
+                                <i class="social-media-icon fa-brands fa-twitter" aria-hidden="true" title="Twitter"></i>
                             </a>
-                            <a href="https://instagram.com/" target="_blank">
-                                <i class="social-media-icon fa-brands fa-instagram"></i>
+                            <a aria-label="Instagram" href="https://instagram.com/" target="_blank">
+                                <i class="social-media-icon fa-brands fa-instagram" aria-hidden="true" title="Instagram"></i>
                             </a>
-                            <a href="https://linkein.com/" target="_blank">
-                                <i class="social-media-icon fa-brands fa-linkedin"></i>
+                            <a aria-label="LinkedIn" href="https://linkein.com/" target="_blank">
+                                <i class="social-media-icon fa-brands fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
                             </a>
                         </div>
                     </div>
@@ -169,20 +170,21 @@
             </div>
         </section>
         <section class="services">
-            <img class="background-lines-right" src="images/background-lines-right.svg" alt="">
+            <img class="background-lines-right" src="images/background-lines-right.svg" alt="Background Lines">
             <div class="container">
                 <div class="headlines">
                     <h2 class="heading-red">Our Services</h2>
                     <h3>We Provide The Best<br>
                         Service For Consulting</h3>
                 </div>
+                <!-- aria-hidden="true" to prevent the screen reader to read the class of i -->
                 <div class="content">
                     <div class="box">
                         <span></span>
                         <h4>Business Advice</h4>
                         <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
-                        <a class="btn-circle" href="">
-                            <i class="fa-light fa-arrow-right"></i>
+                        <a class="btn-circle" href="#">
+                            <i class="fa-light fa-arrow-right" aria-hidden="true"></i>
                         </a>
                     </div>
                     <div class="box">
@@ -190,7 +192,7 @@
                         <h4>Startup Business</h4>
                         <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
                         <a class="btn-circle" href="">
-                            <i class="fa-light fa-arrow-right"></i>
+                            <i class="fa-light fa-arrow-right" aria-hidden="true"></i>
                         </a>
                     </div>
                     <div class="box">
@@ -198,7 +200,7 @@
                         <h4>Financial Advice</h4>
                         <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
                         <a class="btn-circle" href="">
-                            <i class="fa-light fa-arrow-right"></i>
+                            <i class="fa-light fa-arrow-right" aria-hidden="true"></i>
                         </a>
                     </div>
                     <div class="box">
@@ -206,12 +208,11 @@
                         <h4>Risk Managment</h4>
                         <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
                         <a class="btn-circle" href="">
-                            <i class="fa-light fa-arrow-right"></i>
+                            <i class="fa-light fa-arrow-right" aria-hidden="true"></i>
                         </a>
                     </div>
-
                 </div>
-                <a class="btn-transparent btn-center" href="services.html">Browse Services<i class="fa-regular fa-arrow-up-right"></i>
+                <a class="btn-transparent btn-center" href="services.html">Browse Services<i class="fa-regular fa-arrow-up-right" aria-hidden="true"></i>
                 </a>
             </div>
 
