--- a/index.html
+++ b/index.html
@@ -261,25 +261,25 @@
                     <div class="box box-1">
                         <img src="images/case-business.png" alt="A mans hands reading a business paper">
                         <h4>grow your business</h4>
-                        <a class="btn-transparent" href="#">read more<i class="fa-regular fa-arrow-up-right"></i>
+                        <a class="btn-transparent" href="news.html">read more<i class="fa-regular fa-arrow-up-right"></i>
                         </a>
                     </div>
                     <div class="box box-2">
                         <img src="images/case-educate.png" alt="desk with office supplies">
                         <h4>educate your employees to get better results</h4>
-                        <a class="btn-transparent" href="#">read more<i class="fa-regular fa-arrow-up-right"></i>
+                        <a class="btn-transparent" href="news.html">read more<i class="fa-regular fa-arrow-up-right"></i>
                         </a>
                     </div>
                     <div class="box box-3">
                         <img src="images/case-insights.png" alt="laptop with businessintelligence insights">
                         <h4 class=" hej">business insights is a important piece of your business</h4>
-                        <a class="btn-transparent" href="#">read more<i class="fa-regular fa-arrow-up-right"></i>
+                        <a class="btn-transparent" href="news.html">read more<i class="fa-regular fa-arrow-up-right"></i>
                         </a>
                     </div>
                     <div class="box box-4">
                         <img src="images/case-responsive.png" alt="pink apple products">
                         <h4 class="txt-underline">why your client needs a responsive website</h4>
-                        <a class="btn-transparent" href="#">read more<i class="fa-regular fa-arrow-up-right"></i>
+                        <a class="btn-transparent" href="news.html">read more<i class="fa-regular fa-arrow-up-right"></i>
                         </a>
                     </div>
                 </div>
@@ -401,7 +401,7 @@
                     </div>
                 </div>
                 <div class="articles">
-                    <a class="link-no-style" href="#">
+                    <a class="link-no-style" href="news.html">
                         <article>
                             <img class="img-1" src="images/article-1.png" alt="A woman with long brown hair and wearing a blue suit, sitting on a chair next to a table, smiling">
                             <div class="box-date">
@@ -416,7 +416,7 @@
                             </div>
                         </article>
                     </a>
-                    <a class="link-no-style" href="#">
+                    <a class="link-no-style" href="news.html">
                         <article>
                             <img class="img-1" src="images/article-2.png" alt="Descriptions about Chat GPT's ability">
                             <div class="box-date">
@@ -431,7 +431,7 @@
                             </div>
                         </article>
                     </a>
-                    <a class="link-no-style" href="#">
+                    <a class="link-no-style" href="news.html">
                         <article>
                             <img class="img-1" src="images/article-3.png" alt="A mobile phone lying on the top of two books about CSS and Jquery">
                             <div class="box-date">
