--- a/service.html
+++ b/service.html
@@ -12,64 +12,65 @@
         <title>Crito</title>
     </head>
     <body>
-    <header>
-        <div class="container">
-            <a href="index.html"><img src="images/Logo.svg" alt="crito logotype"></a>
-            <button class="menu-bars">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-            <div class="menu">
-                <div class="top-menu">
-                    <div class="contact-information">
-                        <div class="content-box">
-                            <a href="#">
-                                <i class="contact-icon fa-solid fa-phone"></i>
-                                +46 (8) 121 470 50
-                            </div>
-                        </a>
-                        <div class="content-box">
-                            <a href="#">
-                                <i class="contact-icon fa-regular fa-envelope"></i>
-                                info@crito.com
-                            </div>
-                        </a>
-                        <div class="content-box last">
-                            <a href="#">
-                                <i class="contact-icon fa-solid fa-location-dot"></i>
-                                Sveavägen 31, 111 34 STOCKHOLM
-                            </div>
+        <header>
+            <div class="container">
+                <a href="index.html"><img src="images/Logo.svg" alt="crito logotype"></a>
+                <button class="menu-bars">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+                <div class="menu">
+                    <div class="top-menu">
+                        <div class="contact-information">
+                            <div class="content-box">
+                                <a href="#">
+                                    <i class="contact-icon fa-solid fa-phone"></i>
+                                    +46 (8) 121 470 50
+                                </div>
+                            </a>
+                            <div class="content-box">
+                                <a href="#">
+                                    <i class="contact-icon fa-regular fa-envelope"></i>
+                                    info@crito.com
+                                </div>
+                            </a>
+                            <div class="content-box last">
+                                <a href="#">
+                                    <i class="contact-icon fa-solid fa-location-dot"></i>
+                                    Sveavägen 31, 111 34 STOCKHOLM
+                                </div>
+                            </a>
+                        </div>
+                        <div class="social-media">
+                            <a href="https://facebook.com" target="_blank">
+                                <i class="social-media-icon fa-brands fa-facebook"></i>
+                            </a>
+                            <a href="#https://twitter.com/" target="_blank">
+                                <i class="social-media-icon fa-brands fa-twitter"></i>
+                            </a>
+                            <a href="https://instagram.com/" target="_blank">
+                                <i class="social-media-icon fa-brands fa-instagram"></i>
+                            </a>
+                            <a href="https://linkein.com/" target="_blank">
+                                <i class="social-media-icon fa-brands fa-linkedin"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="main-menu">
+                        <nav>
+                            <a href="index.html">Home</a>
+                            <a class="active" href="service.html">Service</a>
+                            <a href="news.html">News</a>
+                            <a href="contacts.html">Contacts</a>
+                        </nav>
+                        <a class="btn-yellow" href="login.html">Login
+                            <i class="fa-solid fa-square-arrow-up-right"></i>
                         </a>
                     </div>
-                    <div class="social-media">
-                        <a href="https://facebook.com" target="_blank">
-                            <i class="social-media-icon fa-brands fa-facebook"></i>
-                        </a>
-                        <a href="#https://twitter.com/" target="_blank">
-                            <i class="social-media-icon fa-brands fa-twitter"></i>
-                        </a>
-                        <a href="https://instagram.com/" target="_blank">
-                            <i class="social-media-icon fa-brands fa-instagram"></i>
-                        </a>
-                        <a href="https://linkein.com/" target="_blank">
-                            <i class="social-media-icon fa-brands fa-linkedin"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="main-menu">
-                    <nav>
-                        <a href="index.html">Home</a>
-                        <a class="active" href="service.html">Service</a>
-                        <a href="news.html">News</a>
-                        <a href="contacts.html">Contacts</a>
-                    </nav>
-                    <a class="btn-yellow" href="login.html">Login
-                        <i class="fa-solid fa-square-arrow-up-right"></i>
-                    </a>
                 </div>
             </div>
-        </div>
-    </header>
-        <section class="showcase showcase-contacts">
+        </header>
+        <section
+            class="showcase showcase-contacts">
             <!-- <img class="background-lines bg-lines-contacts" src="images/background-lines.svg" alt=""> -->
             <div class="container-contacts">
                 <div class="content">
